--- a/scripts/install
+++ b/scripts/install
@@ -72,7 +72,7 @@ ynh_script_progression --message="Setting up source files..." --time --weight=1
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source --dest_dir="$final_path"
-mkdir "$final_path/project"
+#mkdir "$final_path/project"
 
 chmod 755 "$final_path"
 chmod -R o-rwx "$final_path"
